[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "flask-limiter>=4.1.1",
    "gunicorn>=25.1.0",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "qrcode>=8.2",
    "reportlab>=4.4.10",
    "requests>=2.32.5",
    "werkzeug>=3.1.6",
]
